# E3-VDT-OOC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_vdt_cove_attr_v2.txt
.github/: PULL_REQUEST_TEMPLATE.md
configs/: demo.yaml  paths.example.yaml
demo/: app.py
docs/: ACCURACY_PRESERVING_STRATEGY.md  ATTRIBUTION_EXPERIMENT_PROTOCOL.md  CONTROLLED_COUNTERFACTUAL_ATTRIBUTION.md  DATA_AND_ARTIFACTS.md  DEFENSE_QA.md  DEFENSE_QA_COVE_LITE_ADDENDUM.md  DEMO_CASES.md  DEMO_EXAMPLES.md  DEMO_SCRIPT.md  DIVISION_OF_WORK.md  EXPERIMENT_PLAN.md  EXPERIMENT_TODO_AND_HANDOFF.md  FINAL_DELIVERABLES.md  GITHUB_SETUP.md  INNOVATION_POINTS.md  INNOVATION_POINTS_V2.md  LITERATURE_REVIEW_OOC_EXPLANATION.md  NO_TRUE_CONTEXT_SCALING_RESULTS.md  OUTPUT_SCHEMA.md  PPT_OUTLINE.md  PRESENTATION_RUNBOOK.md  PROJECT_BRIEF.md  PROJECT_NEXT_STEPS_COVE_LITE.md  README_V2_POINTER.md  REPORT_OUTLINE.md  REPRODUCTION_PROTOCOL.md  REPRODUCTION_STATUS.md  SYSTEM_DEMO_ACCEPTANCE.md  TASKS.md  TEAMMATE_REPRODUCTION.md  TEAM_WORKFLOW.md  VDT-COVE-Attr-模块方法深挖版.md  VDT-COVE-Attr-系统全流程深度讲稿.md  VDT_CF_ATTR_FULL_DEEP_DIVE_SCRIPT.md  VDT_CF_ATTR_NO_TRUE_CONTEXT.md  VDT_COVE_ATTR_COUNTERFACTUAL_DEEP_DIVE.md  VDT_COVE_ATTR_V2_IMPLEMENTATION_ROUTER.md  WHAT_TO_SEND_ME.md
examples/: attribution_eval_candidates_annotate.xlsx  attribution_eval_set.template.jsonl  cove_attr_demo_cases.jsonl  cove_attr_demo_outputs.json  cove_attr_demo_outputs_full.json  demo_cases.jsonl  demo_outputs.json  real_ooc_attribution_eval_candidates.jsonl  real_ooc_attribution_eval_candidates.xlsx  (+7 more)
(+110 files in other folders)
